<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/card_view_width"
    android:layout_height="@dimen/card_view_height"
    android:background="@color/red"
    android:layout_marginLeft="@dimen/card_view_margin_top"
    android:layout_marginTop="@dimen/card_view_margin_top"
    app:cardCornerRadius="@dimen/card_elevation"
    app:cardElevation="@dimen/card_view_margin_top"
    android:layout_marginStart="@dimen/card_view_margin_top"
    android:layout_marginBottom="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:layout_marginRight="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin">

        <ImageView
            android:id="@+id/movie_poster_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_dimen"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/movie_title_text_sample"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/userratingtextsample"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.v7.widget.CardView>
