<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/movie_poster_desc"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/movie_title"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/user_rating"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/userrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/plot_synopsis"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin_top_large"
                android:text="@string/release_date"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>